--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,66 @@ button {
 /* pokedex */
 #pokedex {
     border: 1px solid black;
-    height: auto;
+    min-height: 400px;
+    min-width: 400px;
+    background-color: var(--pokedex-background);
+    color: var(--text-color);
+    margin-top: 30x;
+    border: 4px solid var(--pokedex-border);
+    border-radius: 10px;
+}
+
+/* searchbar */
+#searchbar {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+#searchbar label {
+    font-size: 1.3rem;
+}
+
+#pokemon-search {
+    padding-left: 5px;
+    height: 20px;
+}
+
+/* pokemon info */
+#pokemon-id-name {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.pokemon-id {
+    background-color: var(--stats-text-color);
+    font-size: 1.3rem;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+    margin: 0 15px;
+}
+
+#pkm-img {
+    background-color: var(--stats-text-color);
+    border: 2px solid var(--pokedex-border);
+    border-radius: 5px;
+    width: 80%;
+    height: 300px;
+    margin: auto;
+}
+
+#pkm-img img {
+    width: 100%;
+    height: 100%;
 }
 
 /* footer */
