--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 :root {
     --pokedex-background: #dd0b30;
+    --pokedex-gradient: linear-gradient(160deg, rgba(221,11,48,1) 0%, rgba(224,28,28,1) 42%, rgba(230,38,38,1) 78%);
     --pokedex-border: #7f0512;
-    --pokemon-font: "PokemonHollow";
-    --font: 
+    --pokemon-font: "PokemonSolid";
+    --font: "Moltors";
     --text-color: #222222;
     --stats-background: #222222;
     --stats-text-color: #dddddd; 
+    --img-gradient: linear-gradient(325deg, rgba(85,85,85,1) 0%, rgba(164,164,164,1) 42%, rgba(221,221,221,1) 78%);
 }
 
 * {
@@ -20,12 +22,16 @@ body {
     justify-content: center;
     align-items: center;
     overflow-x: hidden;
+    font-family: var(--font), Arial, Helvetica, sans-serif;
 }
 
 /* header */
 header {
-    text-align: center;
     font-size: 1.2rem;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h1 {
@@ -40,6 +46,7 @@ h1 img {
 
 .pokemon-name {
     font-family: var(--pokemon-font), Arial, Helvetica, sans-serif;
+    font-size: 2rem;
 }
 
 /* main */
@@ -51,21 +58,23 @@ main {
     position: relative;
 }
 
+/* navigation buttons */
 #previous, #next {
     height: 40px;
     width: 40px;
     border-radius: 50%;
     position: fixed;
     top: calc(50% - 20px);
+    background-color: var(--pokedex-background);
+    border: 2px solid var(--pokedex-border)
 }
 
-/* navigation buttons */
 #previous {
-    left: 15%;
+    left: 25%;
 }
 
 #next {
-    right: 15%;
+    right: 25%;
 }
 
 button {
@@ -77,7 +86,7 @@ button {
     border: 1px solid black;
     min-height: 400px;
     min-width: 500px;
-    background-color: var(--pokedex-background);
+    background: var(--pokedex-gradient);
     color: var(--text-color);
     margin-top: 30x;
     border: 4px solid var(--pokedex-border);
@@ -86,15 +95,20 @@ button {
 
 /* searchbar */
 #searchbar {
+    width: 100%;
+    height: 50px;
     display: flex;
     gap: 10px;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin: 0 0 10px 0;
+    background-color: var(--pokedex-border);
 }
 
 #searchbar label {
-    font-size: 1.3rem;
+    font-size: 1.25rem;
+    font-family: "MoltorsPunch", Arial, Helvetica, sans-serif;
+    color: var(--stats-text-color);
 }
 
 #pokemon-search {
@@ -125,7 +139,7 @@ button {
 }
 
 #pkm-img {
-    background-color: var(--stats-text-color);
+    background: var(--img-gradient);
     border: 2px solid var(--pokedex-border);
     border-radius: 5px;
     width: 80%;
@@ -193,6 +207,11 @@ button {
 #pkm-stats > div > p {
     font-size: 1.25rem;
     text-decoration: underline;
+}
+
+#pkm-stats li {
+    width: 50%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* footer */
