--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,10 @@ body {
     font-family: var(--font), Arial, Helvetica, sans-serif;
 }
 
+button {
+    cursor: pointer;
+}
+
 /* header */
 header {
     font-size: 1.2rem;
@@ -66,7 +70,7 @@ h1 {
 }
 
 h1 img {
-    width: 8rem;
+    width: 5em;
 }
 
 .pokemon-name {
@@ -85,27 +89,7 @@ main {
 }
 
 /* navigation buttons */
-#previous, #next {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    position: fixed;
-    top: calc(50% - 20px);
-    background-color: var(--pokedex-background);
-    border: 2px solid var(--pokedex-border)
-}
 
-#previous {
-    left: 25%;
-}
-
-#next {
-    right: 25%;
-}
-
-button {
-    cursor: pointer;
-}
 
 /* pokedex */
 #pokedex {
