--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 
     --pokedex-img-backrgound: #00d7fc;
     --pokedex-img-background-two: #00e6fe;
-    --pokedex-img-gradient: ;
 
     --buttton-red: #fe1a55;
     --button-blue: #00aaf7;
@@ -23,8 +22,8 @@
 
     --stats-background: #0c1a57;
     --stats-background-two: #294e61;
-    --stats-gradient: ;
     --stats-text-color: #dddddd; 
+    --stats-font-family: "Pixelify Sans";
 
     /* text */
     --pokemon-name-font: "PokemonSolid";
@@ -57,7 +56,7 @@ button {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 /* header */
@@ -602,6 +601,137 @@ main {
     align-items: center;
     justify-content: space-between;
     gap: 2px;
+    overflow: scroll;
+}
+
+#pokemon-statistics, #pokemon-search-by-id, #filter-results {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin: 15px 0;
+    padding: 0 5px;
+    color: var(--stats-text-color);
+    font-family: var(--stats-font-family), Arial, Helvetica, sans-serif;
+}
+
+#pokemon-search-by-id {
+    flex-direction: row;
+    padding: 0 25px;
+}
+
+#filter-results-header {
+    padding: 0 15px;
+}
+
+#filter-results-header span:last-of-type {
+    padding-left: 60px;
+}
+
+/* pokedex-right-buttons */
+#pokedex-right-buttons {
+    width: 90%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#number-buttons {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 40px);
+}
+
+#number-buttons button {
+    border: none;
+    border-radius: 3px;
+    background-color: var(--button-blue);
+    box-shadow: inset 0px 3px 0px var(--blue-highlight);
+    font-size: 1.3rem;
+    color: var(--stats-background-two);
+    font-family: var(--stats-font-family);
+}
+
+#button1, #button2, #button3, #button4, #button5 {
+    border-bottom: 4px solid #0093d3 !important;
+}
+
+#button1, #button2, #button3, #button4, #button6, #button7, #button8, #button9 {
+    border-right: 4px solid #0093d3 !important;
+}
+
+#type-and-buttons {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#type-container {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+
+#type-container div {
+    width: 110px;
+    height: 40px;
+    background-color: var(--button-white);
+    box-shadow: 5px 5px 0px var(--pokedex-border);
+    border-radius: 10px;
+    color: var(--text-color);
+    font-family: var(--stats-font-family), Arial, Helvetica, sans-serif;
+}
+
+#type-container-decorative-buttons {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    margin-right: 10px;
+}
+
+#type-container-decorative-buttons div:not(:last-of-type) {
+    height: 5px;
+    width: 30px;
+    background-color: var(--button-black);
+    border-radius: 5px;
+    margin: 5px 5px 0 5px;
+}
+
+#type-container-decorative-buttons div:last-of-type {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    margin: 5px;
+    border: 2px solid var(--button-grey);
+    background-color: var(--buttton-yellow);
+}
+
+#filter-buttons {
+    height: 60px;
+    margin-top: 10px;
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#filter-buttons button {
+    width: 140px;
+    height: 50px;
+    border: none;
+    background-color: var(--button-black);
+    border-radius: 10px;
+    color: var(--stats-text-color);
+    font-family: var(--stats-font-family), Arial, Helvetica, sans-serif;
+    font-size: 1.1rem;
 }
 
 /* footer */
