JS file modifications to match the new HTML structure

--- a/styles.css
+++ b/styles.css
@@ -602,6 +602,7 @@ main {
     justify-content: space-between;
     gap: 2px;
     overflow: scroll;
+    scroll-margin-top: 15px;
 }
 
 #pokemon-statistics, #pokemon-search-by-id, #filter-results {
