--- a/styles.css
+++ b/styles.css
@@ -285,23 +285,20 @@ main {
     flex-direction: column;
     align-items: center;
     position: relative;
+    overflow: hidden;
+    margin: auto;
 }
 
 #pokemon-img {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    min-height: 100%;
 }
 
 #pokemon-height-weight {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
+    align-items: center;
     padding: 10px 10px 40px 10px;
 }
 
@@ -311,7 +308,7 @@ main {
 }
 
 #pokemon-height-weight div {
-    width: 50%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -319,9 +316,7 @@ main {
 
 #pokemon-name-and-id {
     width: 100%;
-    height: 40px;
-    border: 1px solid black;
-    position: absolute;
+    position: sticky;
     bottom: 10px;
     left: 0;
     background-color: var(--button-grey);
@@ -330,6 +325,10 @@ main {
     justify-content: space-between;
     align-items: center;
     padding: 0 10px;
+}
+
+#pokemon-name-and-id p {
+    margin: 10px 0;
 }
 
 #decorative-button-and-lines {
@@ -772,6 +771,6 @@ footer {
 /* animations */
 
 /* responsive */
-@media screen and (max-width: 1225px) {
+@media screen and (max-width: 850px) {
     
 }
