--- a/styles.css
+++ b/styles.css
@@ -625,7 +625,28 @@ main {
     gap: 2px;
     padding: 10px;
     position: relative;
-    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--stats-background-two);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--pokedex-highlight);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--pokedex-border);
+}
+
+::-webkit-scrollbar-corner {
+    background: var(--stats-background);
 }
 
 #margin-top{
@@ -648,6 +669,7 @@ main {
     padding: 0 5px;
     color: var(--stats-text-color);
     font-family: var(--stats-font-family), Arial, Helvetica, sans-serif;
+    overflow-y: scroll;
 }
 
 #pokemon-search-by-id {
