--- a/styles.css
+++ b/styles.css
@@ -768,10 +768,6 @@ main {
     font-size: 1.2rem;
 }
 
-#filter-by {
-    cursor: default;
-}
-
 #filter-buttons {
     height: 60px;
     margin-top: 10px;
@@ -790,6 +786,23 @@ main {
     color: var(--stats-text-color);
     font-family: var(--stats-font-family), Arial, Helvetica, sans-serif;
     font-size: 1.1rem;
+}
+
+#filter-by {
+    cursor: default;
+}
+
+#filters-slider {
+    display: flex;
+    width: 140px;
+    overflow: hidden;
+}
+
+#filters-slider button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 100%;
 }
 
 /* footer */
