--- a/styles.css
+++ b/styles.css
@@ -622,7 +622,7 @@ main {
     align-items: center;
     justify-content: space-between;
     gap: 2px;
-    padding: 10px;
+    padding-right: 2px;
     position: relative;
 }
 
@@ -649,16 +649,17 @@ main {
 }
 
 #pokemon-statistics, #pokemon-search-by-id, #filter-results {
-    width: 100%;
+    width: calc(100% - 20px);
     height: auto;
     display: flex;
     flex-direction: column;
     gap: 5px;
     margin: 15px 0;
-    padding: 0 5px;
+    padding: 0 10px;
     color: var(--stats-text-color);
     font-family: var(--stats-font-family), Arial, Helvetica, sans-serif;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #pokemon-search-by-id {
@@ -667,15 +668,15 @@ main {
 }
 
 #filter-results-header {
-    padding: 0 15px;
+    width: calc(100% - 20px);
 }
 
 #pokemon-num {
-    padding-left: 28px;
+    padding-left: 45px;
 }
 
 #filter-results-header span:nth-of-type(2) {
-    padding-left: 25px;
+    padding-left: 23px;
 }
 
 #filter-results-header button {
@@ -687,7 +688,7 @@ main {
 }
 
 #pkm-stat-text {
-    margin-left: 30px;
+    margin-left: 17px;
 }
 
 #filter-results-header button span {
@@ -715,7 +716,7 @@ main {
     height: 30px;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 98%;
     background-color: transparent;
     color: var(--stats-text-color);
     border: none;
@@ -733,7 +734,7 @@ main {
 }
 
 .filtered-pkm button span:nth-of-type(2) {
-    width: 105px;
+    width: 120px;
     margin-left: 10px;
     text-align: start;
 }
@@ -741,6 +742,10 @@ main {
 .filtered-pkm button span:nth-of-type(3) {
     width: 30px;
     text-align: start;
+}
+
+#filtered-pkm-list {
+    list-style-type: none;
 }
 
 /* pokedex-right-buttons */
