update lists style to none

--- a/styles.css
+++ b/styles.css
@@ -744,7 +744,7 @@ main {
     text-align: start;
 }
 
-#filtered-pkm-list {
+#filtered-pkm-list, #list-of-types, .list-of-filtered-pkm {
     list-style-type: none;
 }
 
